avoid flicker on mobile taps

--- a/public/assets/css/application.scss
+++ b/public/assets/css/application.scss
@@ -47,6 +47,7 @@ nav.main {
   a {
     font: italic 24px/1 "Anonymous Pro", monospace;
     -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
     color: #fff;
     text-transform: uppercase;
     letter-spacing: -1px;
